new long profiles

--- a/SlopeAreaAnalysis.ipynb
+++ b/SlopeAreaAnalysis.ipynb
@@ -20,7 +20,7 @@
     "import pandas as pd\n",
     "#merged slope raster, accumulation area raster, and watershed raster into one three band raster.\n",
     "# exported this raster into a text file from OSGeo4W command line:\n",
-    "# gdal2xyz input.tif -band 1 -band 2 -band 3 output.txt. This is a slow operation... \n"
+    "# gdal2xyz input.tif -band 1 -band 2 -band 3 output.txt. This is a slow operation... "
    ]
   },
   {
@@ -40,7 +40,8 @@
    ],
    "source": [
     "try:\n",
-    "    ds = gdal.Open('S:\\JESSE\\Slope Area Figs Data\\Angelo_SR.tif')\n",
+    "    #ds = gdal.Open('S:\\JESSE\\Slope Area Figs Data\\Angelo_SR.tif')\n",
+    "    ds = gdal.Open('S:\\JESSE\\GIS\\DEM\\Elev_FlowAccum_FlowLength_Watershed4.tif')\n",
     "except RuntimeError, e:\n",
     "    print 'Unable to open .tif'\n",
     "    print e\n",
